refact: add various ArrayUtil methods and use where applicable
...with the goal to increase readability and improve performance